--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     document.addEventListener('DOMContentLoaded', function() {
       const spinner = document.getElementById('spinner');
       const button = document.getElementById('redirectButton');
-      const targetUrlIOS   = 'https://impression.appsflyer.com/id1072084799?c=FRAISER&af_c_id=FRAISER&af_adset_id=FRAISER&clickId=71eaa41d-b6ea-45d1-8ac3-3f0b03f44d68&affId=1024020&pid=playhilllto_int&af_viewthrough_lookback=24h'; // Change this to your target URL
+      const targetUrlIOS   = 'https://app.appsflyer.com/id1072084799?c=FRAISER&af_c_id=FRAISER&af_adset_id=FRAISER&clickId=71eaa41d-b6ea-45d1-8ac3-3f0b03f44d68&affId=1024020&pid=playhilllto_int&af_click_lookback=30d'; // Change this to your target URL
       const targetUrlXM ='https://clicks.pipaffiliates.com/c?c=957920&l=en&p=1'
       
       // Show spinner
